--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <li data-row="3" data-col="3" data-sizex="1" data-sizey="1"></li>
         <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
         <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
+        <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
+        <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
+        <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
+        <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
       </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
