--- a/index.html
+++ b/index.html
@@ -1,47 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Draggable Grid System with Gridster.js</title>
-  </head>
-  <body>
-    <br />
-    <br />
-    <br />
-    <br />
-    <div class="gridster">
-      <ul>
-        <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
-        <li data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
-        <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
-        <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
-        <li data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
-        <li data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
-        <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
-        <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
-        <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
-        <li data-row="3" data-col="3" data-sizex="1" data-sizey="1"></li>
-        <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-        <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
-        <li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
-        <li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-        <li data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
-        <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
-      </ul>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.gridster/0.5.6/jquery.gridster.min.js"></script>
-    <script>
-      $(function() {
-        $(".gridster ul").gridster({
-          widget_margins: [10, 10],
-          widget_base_dimensions: [140, 140]
-        });
+<head>
+  <meta charset="UTF-8">
+  <title>Draggable Grid System with Gridster.js</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="gridster">
+    <ul>
+      <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
+      <li data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
+      <!-- Add more li elements for your images here -->
+    </ul>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.gridster/0.5.6/jquery.gridster.min.js"></script>
+  <script>
+    $(function() {
+      $(".gridster ul").gridster({
+        widget_margins: [10, 10],
+        widget_base_dimensions: [140, 140],
+        autogenerate_stylesheet: true,
+        resize: {
+          enabled: true,
+          stop: function(e, ui, $widget) {
+            var img = $widget.find('img');
+            var imgWidth = img.width();
+            var imgHeight = img.height();
+            $widget.attr('data-sizex', Math.ceil(imgWidth / 140));
+            $widget.attr('data-sizey', Math.ceil(imgHeight / 140));
+          }
+        }
       });
-    </script>
-  </body>
+
+      // Load the images and adjust dimensions
+      const liElements = $(".gridster ul li");
+      liElements.each(function(index) {
+        const liElement = $(this);
+        const imgUrl = "images/" + (index + 1).toString().padStart(3, "0") + ".jpg";
+        const img = new Image();
+        img.onload = function() {
+          const imgWidth = img.width;
+          const imgHeight = img.height;
+          liElement.attr('data-sizex', Math.ceil(imgWidth / 140));
+          liElement.attr('data-sizey', Math.ceil(imgHeight / 140));
+          liElement.css('background-image', `url(${imgUrl})`);
+        };
+        img.src = imgUrl;
+      });
+    });
+  </script>
+</body>
 </html>
+
