--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       $(function() {
         $(".gridster ul").gridster({
           widget_margins: [10, 10],
-          widget_base_dimensions: [1, 1]
+          widget_base_dimensions: auto
         });
       });
     </script>
